refactoring: Fix some issue
[PAGOPA-2379]